# invoice-parser

./: .env.example  .gitignore  CLAUDE_CODE_KICKOFF.md  Dockerfile  INVOICE_PARSER_SPEC.md  README.md  pyproject.toml  railway.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: create_api_key.py  entrypoint.sh  run_local.py  start.sh  start_worker.sh
src/invoice_parser/: config.py
src/invoice_parser/api/: auth.py  main.py  routes.py  schemas.py  ui.py
src/invoice_parser/db/: models.py  queue.py  session.py
src/invoice_parser/schema/: invoice.py
src/invoice_parser/storage/: base.py  local.py  r2.py
src/invoice_parser/worker/: cross_validate.py  emit.py  escalate.py  ingest.py  main.py  ocr.py  pipeline.py  render.py  segment.py  semantic_pick.py  validators.py  vision_llm.py
tests/: test_api.py  test_cross_validate.py  test_validators.py
